<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".activity.login.EmailLoginActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="0.255"
        android:padding="4dp"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="316dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:hint="Enter email"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/white"
        android:text="Log In"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register"
        android:layout_width="230dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="Don't have an account? Register now"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LogIn"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="@+id/LogIn"
        app:layout_constraintTop_toBottomOf="@+id/LogIn"
        app:layout_constraintVertical_bias="0.156"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="234dp"
        android:layout_height="219dp"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_no_background" />


</androidx.constraintlayout.widget.ConstraintLayout>